Fixed some whitespace

--- a/site/generalStyling.css
+++ b/site/generalStyling.css
@@ -39,18 +39,6 @@
 	color: #000;
 }
 
-#china{
-	border: 3px solid #fff;
-	padding: 20px;
-	float: left;
-}
-#india{
-	border: 3px solid #fff;
-	padding: 20px;
-	padding-left: 40px;
-	float: right;
-}
-
 .formation-container {
   display: flex;
   flex-direction: column;
@@ -75,6 +63,7 @@
   color: #FFFFFF;
   width: 100%;
   padding-left: 10px;
+  margin-top: 0px; padding-top: 0px;
   font-size: 3em;
   font-family: Arial;
 }
